# topoflow

./: .gitignore  Cargo.toml  README.md  build.rs  quickstart.sh
benches/: mesh_benchmark.rs
docs/: USAGE.md
src/: lib.rs  main.rs
src/algorithms/: decimation.rs  mod.rs  quad_dominant.rs  remesh.rs  smoothing.rs
src/io/: blend.rs  mod.rs  obj.rs
src/mesh/: attributes.rs  halfedge.rs  mod.rs  topology.rs  validation.rs
src/ui/: mod.rs  panels.rs  tools.rs
src/utils/: math.rs  mod.rs  spatial.rs
src/viewport/: camera.rs  mesh_buffer.rs  mod.rs  renderer.rs
tests/: io_tests.rs  mesh_tests.rs  topology_tests.rs
